--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,12 @@
     <string name="placeholder_current_element">Waiting for plan to run...</string>
     <string name="button_start">Start</string>
     <string name="button_stop">Stop</string>
+    <string name="button_select_plan">Select Plan</string>
     <string name="label_checked_senses">Checked Senses:</string>
     <string name="placeholder_checked_senses">Waiting for plan to run...</string>
     <string name="button_add_location">Add</string>
     <string name="button_clear_locations">Clear</string>
     <string name="saved_locations_count">Locations (%1$d):</string>
     <string name="label_locations">Locations:</string>
+    <string name="label_selected_plan">no plan selected</string>
 </resources>
